testament/tests/shouldfail/tsortoutput.nim
discard """
  sortoutput: true
  output: '''
2
1
'''
"""

# this test should ensure that the output is actually sorted
echo "2"
echo "1"
